secondfile/objects/UnprocessedQuote__c.object
<CustomObject>
    <description>It will hold all quotes , till its line item not created</description>
    <fields>
        <fullName>Cart_Id__c</fullName>
        <label>Cart Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean Flag to hold the data for processing.</description>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineItemCount__c</fullName>
        <label>LineItemCount</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Linenumber__c</fullName>
        <description>will hold unique line number of quote</description>
        <label>Linenumber</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quote Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <description>Will hold name of quote for tracking purpose</description>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteId__c</fullName>
        <label>SiteId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Unprocessed Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cart_Id__c</columns>
        <columns>IsProcessed__c</columns>
        <columns>LineItemCount__c</columns>
        <columns>Linenumber__c</columns>
        <columns>Quote_Id__c</columns>
        <columns>Quote_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UQN-{00000}</displayFormat>
        <label>UnprocessedQuote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unprocessed Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>